--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
-	"name": "kamisama/php-resque-ex",
+	"name": "jimyaghi/php-resque-ex",
 	"type": "library",
 	"description": "Redis backed library for creating background jobs and processing them later. PHP port based on resque for Ruby.",
 	"keywords": ["job", "background", "redis", "resque", "queue", "php"],
 	"homepage": "http://www.github.com/kamisama/php-resque-ex/",
 	"license": "MIT",
 	"authors": [
+                {
+			"name": "Jim Yaghi",
+			"email": "jim@jimyaghi.com",
+			"homepage": "http://www.jimyaghi.com"
+		},
 		{
 			"name": "Wan Chen",
 			"email": "kami@kamisama.me",
