--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
 		"bin/resque"
 	],
 	"conflict": {
-		"chrisboulton/php-resque": "*"
+		"chrisboulton/php-resque": "*",
+		"kamisama/php-resque-ex": "*"
 	}
 }
