Revert "conflict in composer file"
This reverts commit 233723cadb6048813b9645a553e2f3f62d059234.

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,6 @@
 		"bin/resque"
 	],
 	"conflict": {
-		"chrisboulton/php-resque": "*",
-		"kamisama/php-resque-ex": "*"
+		"chrisboulton/php-resque": "*"
 	}
 }
